--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "karma-brave-launcher",
-  "version": "1.1.0",
+  "name": "karma-brave-windows-launcher",
+  "version": "1.0.0",
   "description": "Brave browser launcher for karma",
   "main": "index.js",
   "scripts": {
@@ -16,5 +16,13 @@
   "license": "MIT",
   "dependencies": {
     "which": "^1.2.12"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fgsoftware1/karma-brave-launcher.git"
+  },
+  "bugs": {
+    "url": "https://github.com/fgsoftware1/karma-brave-launcher/issues"
+  },
+  "homepage": "https://github.com/fgsoftware1/karma-brave-launcher#readme"
 }
